--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,21 @@
     </style>
 
 </head>
+ <h4> Top spot</h4>
+ <p>description</p>
+ <a href>extra </a>
+<div class="card" style="width: 18rem;">
+  <div class="card-header">
+    Featured
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">An item</li>
+    <li class="list-group-item">A second item</li>
+    <li class="list-group-item">A third item</li>
+  </ul>
+</div>
+  
+
 
 <body>
   <div id="root"></div>
